--- a/src/css/template.css
+++ b/src/css/template.css
@@ -26,31 +26,14 @@ body {
     width: 100vw;
 }
 .video {
-    grid-column: 2 / 18; 
-    grid-row: 10 / 24;
+    grid-column: 13 / 34; 
+    grid-row: 1 / 26;
     border: .25vmin solid lightgrey;
     align-content: center;
     background-image: url("http://10.50.45.11:5800");
     background-size: contain;
     background-repeat: no-repeat;
     background-color: 'blue';
-
-}
-.player1 {
-    grid-column: 18 / 24;    
-    grid-row: 3 / 8;
-    border: .25vmin solid lightgrey;
-    text-align: center;    
-}
-.player2 {
-    grid-column: 24 / 30;    
-    grid-row: 3 / 8;
-    border: .25vmin solid lightgrey;
-    text-align: center;
-}
-#degree, #velocity, #acceleration {
-    font-size: 2.5vh;
-    font-weight: bolder;
 }
 .data {
     grid-column: 30 / 32;
@@ -59,6 +42,7 @@ body {
     text-align: center;
 }
 .title {
+    display: none;
     grid-column: 2 / 32;
     grid-row: 1 / 3;
     font-size: 2.5vmin;
@@ -70,8 +54,8 @@ body {
     border: .25vmin solid lightgrey;    
 }
 .timer {
-    grid-column: 2 / 10;
-    grid-row: 3 / 8;
+    grid-column: 1 / 13;
+    grid-row: 1 / 4;
     font-family: 'Bungee Shade', cursive;
     font-weight: bolder;
     text-align: center;
@@ -80,36 +64,54 @@ body {
     font-size: 150%;
     border: .25vmin solid lightgrey;    
     }
-.auto {
-    grid-column: 10 / 18;
-    grid-row: 3 / 8;
+.elevator {
+    display: grid;
+    grid-column: 1 / 5;
+    grid-row: 4 / 6;
     text-align: center;
     align-self: top;
+    font-style: italic;
     color:white;
-    font-size: 2vmin;
+    font-weight: bolder;
+    font-size: 4vmin;
     padding-top: 2vh;
     border: .25vmin solid lightgrey;    
 }
-.auton {
+.wrist {
+    display: grid;
+    grid-column: 5 / 9;
+    grid-row: 4 / 6;
+    text-align: center;
+    align-self: top;
+    color:white;
+    font-style: italic;
+    font-weight: bolder;
+    font-size: 4vmin;
+    padding-top: 2vh;
+    border: .25vmin solid lightgrey;    
+}
+.intake {
+    display: grid;
+    grid-column: 9 / 13;
+    grid-row: 4 / 6;
+    text-align: center;
+    align-self: top;
+    font-style: italic;
+    color:white;
+    font-weight: bolder;
+    font-size: 4vmin;
+    padding-top: 2vh;
+    border: .25vmin solid lightgrey;    
 }
 .tunable {
-    grid-column: 18 / 32;
-    grid-row: 3 / 24;
+    grid-column: 1 / 13;
+    grid-row: 6 / 26;
     overflow-y: scroll;
 }
 .graph {
-    grid-column: 2 / 18; 
-    grid-row: 10 / 24;
     border: .25vmin solid lightgrey;
-    background-color:white;
+    background-color:#222;
     overflow: wrap;
-}
-.settings {
-    grid-column: 2 / 18;
-    grid-row: 8 / 10;
-    border: .25vmin solid lightgrey;   
-    white-space: nowrap;
-    text-align: center;
 }
 #clear {
     width:15vw;
@@ -119,19 +121,6 @@ body {
     padding-right: 2.5vw;
     margin-left: 2.5vw;
     margin-right: 2.5vw;
-}
-#pids {
-    width:15vw;
-    height:2rem;
-    margin-top: 2vh;    
-    padding-left: 2.5vw;
-    padding-right: 2.5vw;
-    margin-left: 2.5vw;
-    margin-right: 2.5vw;
-}
-select.auto {
-    width:10vw;
-    height:5vh;
 }
 table, th, td {
     overflow-x: hidden;    
